<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/floating_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#C0000000"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left">

        <TextView
            android:id="@+id/tv_to_small"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/toggle_small"
            android:textColor="#80FF00FF" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/tracker_close"
            android:textColor="#80FF00FF" />

        <CheckBox
            android:id="@+id/cb_enable_tracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="4dp"
            android:checked="false"
            android:text="@string/tracker_upload"
            android:textColor="#80FF00FF" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tracker_page_info"
                android:textColor="#80FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_pageSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/tracker_submit"
                android:textColor="#80FF00FF" />

            <CheckBox
                android:id="@+id/cb_disableInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="4dp"
                android:text="@string/tracker_disable_input"
                android:textColor="#80FF00FF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker_map_name"
                android:textColor="#80FFFFFF" />

            <EditText
                android:id="@+id/tv_pageDesc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="#80FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_pageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="#80FFFFFF"
            tools:text="123" />

        <TextView
            android:id="@+id/tv_copyPageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracker_copy"
            android:textColor="#80FF00FF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pageId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="#80FFFFFF" />

            <TextView
                android:id="@+id/tv_pageCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/tracker_copy"
                android:textColor="#80FF00FF" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tracker_item_info"
                android:textColor="#80FFFFFF"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/tv_itemSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/tracker_submit"
                android:textColor="#80FF00FF" />

            <CheckBox
                android:id="@+id/cb_stopAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="4dp"
                android:text="@string/tracker_stop_action"
                android:textColor="#80FF00FF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker_map_name"
                android:textColor="#80FFFFFF" />

            <EditText
                android:id="@+id/tv_itemDesc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="#80FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="#80FFFFFF" />

        <TextView
            android:id="@+id/tv_copyItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracker_copy"
            android:textColor="#80FF00FF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_itemId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="#80FFFFFF" />

            <TextView
                android:id="@+id/tv_itemCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/tracker_copy"
                android:textColor="#80FF00FF" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="#80FFFFFF" />

    </LinearLayout>

</LinearLayout>
